[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Admin Testing Room/TX Props.png" type="Texture" id=1]
[ext_resource path="res://Scripts/questdoor.gd" type="Script" id=2]
[ext_resource path="res://Assets/Popup Emotes/pipo-popupemotes003.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 29, 103, 37, 50 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 29, 166, 37, 53 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.5, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 18.5, 8.5 )

[sub_resource type="CircleShape2D" id=5]
radius = 12.0

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="QuestDoor" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="DoorClosed" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="DoorOpen" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -26 )
texture = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -1 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, 3.5 )
shape = SubResource( 4 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 5, -73 )
shape = SubResource( 5 )
action = "open_door"
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="TouchScreenButton"]
position = Vector2( 12.25, 13 )
scale = Vector2( 0.765625, 0.78125 )
frames = SubResource( 9 )
frame = 1
playing = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
